Backend/dotnet/Microservices/MergeAllConcept/k8s/authservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - name: authservice
        image: dkeshri/microservice-auth-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: authservice-service
spec:
  selector:
    app: authservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
