Backend/dotnet/Microservices/MergeAllConcept/k8s/mssql-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql-database
  namespace: dkeshri
spec:
  selector:
    matchLabels:
      dkeshri.io/database: mssql-database
  serviceName: mssql-service
  replicas: 1
  template:
    metadata:
      labels:
        dkeshri.io/database: mssql-database 
        namespace: dkeshri
    spec:
      containers:
      - name: mssql-database
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssql-db-pvc
          mountPath: /var/opt/mssql
  volumeClaimTemplates:
  - metadata:
      name: mssql-db-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  namespace: dkeshri
spec:
  selector:
    dkeshri.io/database: mssql-database
  type: NodePort  # Exposes the DB outside the cluster
  ports:
    - protocol: TCP
      port: 1433 # Inside Kubernetes
      targetPort: 1433  # Inside the container
      nodePort: 30000   # Exposed port on host (must be between 30000-32767)
