Backend/dotnet/Microservices/MergeAllConcept/k8s/paymentservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
      - name: paymentservice
        image: dkeshri/microservice-payment-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice-service
spec:
  selector:
    app: paymentservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
