Backend/dotnet/Microservices/MergeAllConcept/k8s/apigateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: dkeshri
spec:
  ingressClassName: nginx
  rules:
  - host: apigateway.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apigateway-service
            port:
              number: 80
